styled, gifs start and stop, ratings appear

--- a/index.html
+++ b/index.html
@@ -15,17 +15,33 @@
 </head>
 
 <body>
-    <div>
-       
+        <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Doctor Who Gifs</h1>
+                  <p class="lead">A collection of gifs through time and space. Click the 'Gif it to Me' button to add more.</p>
+                </div>
+              </div>
+<div class="card">
+    <div class="card-body">
+        <div>
+       </div>
     </div>
-    <div>
-        <form class="form-inline">
-            <label class="sr-only" for="inlineFormInputName2"></label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Enter a keyword!!">
-            <button id="gif-me" type="button" class="btn btn-success mb-2">Gif it to ME!!!</button>
-        </form>
+</div>
+    <div class="card"> 
+        <div class="card-body">
+            <form class="form-inline">
+                <label class="sr-only" for="inlineFormInputName2"></label>
+                <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Enter a keyword!!">
+                <button id="gif-me" type="button" class="btn btn-success mb-2">Gif it to ME!!!</button>
+            </form>
+        </div>
     </div>
-    <div id="images">
+    <div class="card"> 
+        <div class="card-body">
+            <div id="images">
+            </div>
+            
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="exp-app.js"></script>
