--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1>Doctor Who Gifs</h1>
-            <p>A collection of gifs through time and space. Enter a search keyword and click the 'Gif it to Me' button to add more buttons.</p>
+            <p>A collection of gifs through time and space. Enter a search keyword and click the 'Gif it to Me' button to add more buttons. Gifs are still by default. Click on them to animate and pause them.</p>
         </div>
     </div>
     <div class="row">
