moved text out of jumbotron, made h4, added fonts

--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat+Alternates:wght@100;400&family=Staatliches&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1>Doctor Who Gifs</h1>
-            <p>A collection of gifs through time and space. Enter a search keyword and click the 'Gif it to Me' button to add more buttons. Gifs are still by default. Click on them to animate and pause them.</p>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12">
             <div class="card">
                 <div class="card-body">
+                    <div class="card-text">
+                    <h4>A collection of gifs through time and space. Enter a search keyword and click the 'Gif it to Me'
+                        button to add more buttons. Gifs are still by default. Click on them to animate and pause them.
+                    </h4></div>
                     <div class="new-buttons">
                     </div>
                 </div>
@@ -31,7 +35,7 @@
         <div class="card-body">
             <form class="form-inline">
                 <input type="text" class="form-control" placeholder="Enter a keyword!">
-                <button id="gif-me" type="button" class="btn btn-success">Gif it to Me</button>
+                <button id="gif-me" type="button" class="btn btn-success ">Gif it to Me</button>
             </form>
         </div>
     </div>
